@@ -198,25 +198,25 @@ function simpletest_schema() {
         'default' => '',
         'description' => t('The message group this message belongs to. For example: warning, browser, user.'),
       ),
-      'caller' => array(
+      'function' => array(
         'type' => 'varchar',
         'length' => 255,
         'not null' => TRUE,
         'default' => '',
-        'description' => t('Name of the caller function or method that created this message.'),
+        'description' => t('Name of the assertion function or method that created this message.'),
       ),
       'line' => array(
         'type' => 'int',
         'not null' => TRUE,
         'default' => 0,
-        'description' => t('Line number of the caller.'),
+        'description' => t('Line number on which the function is called.'),
       ),
       'file' => array(
         'type' => 'varchar',
         'length' => 255,
         'not null' => TRUE,
         'default' => '',
-        'description' => t('Name of the file where the caller is.'),
+        'description' => t('Name of the file where the function is called.'),
       ),
     ),
     'primary key' => array('message_id'),
